# repeto

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  install.html  print.html  searchindex.js  searchindex.json
.github/workflows/: CI.yml
docs/: book.toml
docs/src/: SUMMARY.md  development.md  install.md
docs/src/algo/: intro.md  matching.md
docs/src/bio-primer/: bio-primer.md
docs/src/introduction/: introduction.md
docs/src/py/: basic-usage.py  basic.md  basic.py  interface.md  real-use-case.py  tutorial.md
docs/src/py/data/: assembly.fa  expected-inverted-repeats.bed
modules/py/: Cargo.toml  pyproject.toml  repeto.pyi
modules/py/src/: lib.rs  repeats.rs
modules/repeto/: Cargo.toml
modules/repeto/src/: dsrna.rs  lib.rs  predict.rs  repeats.rs
modules/repeto/src/optimize/: dynprog.rs  index.rs  mod.rs
modules/repeto/src/predict/: alignable.rs  engine.rs  mod.rs
modules/repeto/src/predict/aligner/: dynprog.rs  mod.rs
modules/repeto/src/predict/alignment/: alignable.rs  mod.rs
modules/repeto/src/predict/alignment/pairwise/: alignment.rs  local.rs  mod.rs
modules/repeto/src/predict/alignment/pairwise/backend/sw/: engine.rs
modules/repeto/src/predict/alignment/pairwise/backend/sw/algo/: local.rs
modules/repeto/src/predict/alignment/pairwise/backend/sw/storage/: allopt.rs
modules/repeto/src/predict/alignment/pairwise/backend/sw/traceback/: mod.rs
modules/repeto/src/predict/alignment/pairwise/scoring/: delegate.rs  mod.rs  symbols.rs
modules/repeto/src/predict/alignment/pairwise/sw/: engine.rs  mod.rs
modules/repeto/src/predict/alignment/pairwise/sw/algo/: local.rs  mod.rs
modules/repeto/src/predict/alignment/pairwise/sw/storage/: alloptimal.rs  mod.rs
modules/repeto/src/predict/alignment/pairwise/sw/traceback/: mod.rs  tracemat.rs
modules/repeto/src/predict/scoring/: delegate.rs  gaps.rs  mod.rs  symbols.rs
modules/repeto/src/predict/storage/: alloptimal.rs  mod.rs
modules/repeto/src/predict/traceback/: mod.rs  tracemat.rs
modules/repeto/src/repeats/: inv.rs  mod.rs
py/: interface.html  tutorial.html
py/data/: assembly.fa.fai  binding-sites.bed
