[workspace]
members = ["modules/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.67.0"
authors = ["Aleksandr Fedorov <anfedorov@hse.ru>"]
description = "TODO"
documentation = "TODO"
readme = "README.md"
homepage = "TODO"
repository = "TODO"
license = "MIT"
categories = ["science", "algorithms"]

[workspace.dependencies]
itertools = "0.10.5"
