[workspace]
members = ["modules/*"]

[workspace.package]
version = "0.0.6"
edition = "2021"
rust-version = "1.67.0"
authors = ["Aleksandr Fedorov <anfedorov@hse.ru>"]
description = "TODO"
documentation = "TODO"
readme = "README.md"
homepage = "https://github.com/nucleohub/repeto"
repository = "https://github.com/nucleohub/repeto"
license = "MIT"
categories = ["science", "algorithms"]

[workspace.dependencies]
itertools = "0.10.5"
derive-getters = "0.2.0"