[package]
name = "repeto-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[lib]
name = "repeto"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
repeto = { path = "../repeto" }
