[package]
name = "repeto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
itertools = { workspace = true }
derive-getters = { workspace = true }
biobit-alignment = { git = "https://github.com/nucleohub/biobit", rev = "683c0fa19460c1549f98b18fdbe6b2b8152784b3"}
