[package]
name = "repeto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
itertools = { workspace = true }
derive-getters = { workspace = true }
num = { workspace = true }
biobit-alignment = { git = "https://github.com/nucleohub/biobit", rev = "725c776b3b80d0c69908ddd0d697d071712e94fc" }
